Mudanças no design e merge